# glance-github-graph

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  pipeline.yml
glance-github-graph/: Cargo.toml
glance-github-graph/src/: api.rs  color.rs  lib.rs  main.rs  templates.rs
glance-github-graph/templates/: graph.html  stats.html
src/: api.rs  color.rs  config.rs  lib.rs  main.rs  templates.rs
templates/: stats.html
