[package]
name = "glance-github-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls-native-roots"], default-features = false }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
cached = "0.46.0"
lazy_static = "1.4.0"
askama = "0.12.1"
chrono = "0.4"
url = "2.5.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true

[[bin]]
name = "glance-github-graph"
path = "src/main.rs"
